# filedress

./: Cargo.toml  DEV.md  LICENSE  README.md  STRUCTURE.md  filedress_struct.txt
.github/workflows/: release.yml
docs/: install.ps1  install.sh
src/: cli.rs  commands.rs  file_utils.rs  lib.rs  main.rs  to_delete.rs  updater.rs
src/commands/: add.rs  clean.rs  copy.rs  mod.rs  remove.rs  structure.rs  utils.rs
tests/: integration_tests.rs
tests/test_files/: complex.rs.input  complex_python.py.input  my_page.html.input  my_python.py.input  my_rust.rs.input  my_style.css.input  no_comments.rs.input  only_header.py.input  string_python.py.input  string_rust.rs.input
