[package]
name = "filedress"
version = "1.0.6"
edition = "2024"
description = "A fast, cross-platform CLI tool to manage file headers and comments."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Netajam/filedress"
keywords = ["cli", "file-management", "header", "comments", "automation"]
categories = ["command-line-utilities"]

[[bin]]
name = "filedress"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
walkdir = "2.5.0"
anyhow = "1.0.98"
arboard = "3.3.0"
semver = "1.0"
dirs = "5.0"  
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"  
reqwest = { version = "0.11", features = ["blocking", "json"] }

[dev-dependencies]
tempfile = "3.8.1"